--- a/backend/package.json
+++ b/backend/package.json
@@ -1,31 +1,48 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js"
-}
-,
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.20.0",
-    "passport": "^0.7.0",
-    "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0",
-    "uuid": "^13.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.11"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "type": "module",
+    "scripts": {
+        "start": "node server.js",
+        "dev": "nodemon server.js",
+        "realtime": "node realtime-server.js",
+        "worker": "node worker/s3-event-worker.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@aws-sdk/client-s3": "^3.939.0",
+        "@aws-sdk/s3-request-presigner": "^3.939.0",
+        "bcryptjs": "^3.0.3",
+        "bullmq": "^5.65.0",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
+        "dayjs": "^1.11.19",
+        "dotenv": "^17.2.3",
+        "express": "^5.1.0",
+        "handlebars": "^4.7.8",
+        "ioredis": "^5.8.2",
+        "jsonwebtoken": "^9.0.2",
+        "lodash.debounce": "^4.0.8",
+        "mongoose": "^8.20.0",
+        "multer": "^2.0.2",
+        "nanoid": "^5.1.6",
+        "nodemailer": "^7.0.11",
+        "passport": "^0.7.0",
+        "passport-github2": "^0.1.12",
+        "passport-google-oauth20": "^2.0.0",
+        "sharp": "^0.34.5",
+        "socket.io": "^4.8.1",
+        "socket.io-client": "^4.8.1",
+        "uuid": "^13.0.0",
+        "ws": "^8.18.3",
+        "y-websocket": "^1.3.12",
+        "yjs": "^13.6.27"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.11"
+    }
 }
